spacing fix to cart icon in header

--- a/src/components/shoppingCartIcon/shoppingCartIcon.module.css
+++ b/src/components/shoppingCartIcon/shoppingCartIcon.module.css
@@ -1,3 +1,7 @@
 .shoppingCart {
-    color: white;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: white;
+}
